[package]
name = "ShareFileServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4",features = ["tokio","tracing","tower-log"]}
tokio = {version = "1.35.1",features = ["full"]}
tower-http = {version = "0.5.1",features = ["fs","trace"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",features = ["env-filter"]}