[package]
name = "share_file_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1",features = ["full"]}
share_file_server = {path = "../share_file_server"}
clap =  {version = "4.5.0", features = ["derive"]}
clap_derive = "4.5.0" 
